// Vitest Snapshot v1

exports[`Upload > Upload baseMultipleVue demo works fine 1`] = `
<div
  data-v-0c024305=""
>
  <div
    class="t-cell-group dialog-type-title"
    data-v-0c024305=""
  >
    <!--v-if-->
    <div
      class="t-cell-group__container"
    >
      
      <div
        class="title"
        data-v-0c024305=""
      >
        多选上传图片
      </div>
      <div
        data-v-0c024305=""
      >
        <ul
          class="t-upload__card"
        >
          
          
          <li
            class="t-upload__card-item"
          >
            <div
              class="t-upload__card-container t-upload__card-box"
            >
              <svg
                class="t-icon t-icon-add"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
          </li>
        </ul>
        <input
          accept=""
          hidden=""
          multiple=""
          type="file"
        />
        <transition-stub
          class="t-image-viewer"
        >
          <div
            class="t-overlay"
            style="z-index: 1000; transition-duration: 300ms; display: none;"
          >
            
            
          </div>
        </transition-stub>
      </div>
      
    </div>
  </div>
  <transition-stub
    data-v-0c024305=""
  >
    <!--v-if-->
  </transition-stub>
</div>
`;

exports[`Upload > Upload baseSingleVue demo works fine 1`] = `
<div
  data-v-1b7b387d=""
>
  <div
    class="t-cell-group dialog-type-title"
    data-v-1b7b387d=""
  >
    <!--v-if-->
    <div
      class="t-cell-group__container"
    >
      
      <div
        class="title"
        data-v-1b7b387d=""
      >
        单选上传图片
      </div>
      <div
        data-v-1b7b387d=""
      >
        <ul
          class="t-upload__card"
        >
          
          
          <li
            class="t-upload__card-item"
          >
            <div
              class="t-upload__card-container t-upload__card-box"
            >
              <svg
                class="t-icon t-icon-add"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
          </li>
        </ul>
        <input
          accept=""
          hidden=""
          type="file"
        />
        <transition-stub
          class="t-image-viewer"
        >
          <div
            class="t-overlay"
            style="z-index: 1000; transition-duration: 300ms; display: none;"
          >
            
            
          </div>
        </transition-stub>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Upload > Upload mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-f557e7b4=""
>
  <h1
    class="title"
    data-v-f557e7b4=""
  >
    Upload上传
  </h1>
  <p
    class="summary"
    data-v-f557e7b4=""
  >
    上传图片（单张上传、多张上传
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-f557e7b4=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      01 类型
    </h2>
    <p
      class="tdesign-mobile-demo-block__summary"
    >
      上传图片
    </p>
    
    <div
      class="upload-demo"
      data-v-f557e7b4=""
    >
      <div
        class="upload-title"
        data-v-f557e7b4=""
      >
        单选上传图片
      </div>
      <div
        data-v-f557e7b4=""
      >
        <ul
          class="t-upload__card"
        >
          
          
          <li
            class="t-upload__card-item"
          >
            <div
              class="t-upload__card-container t-upload__card-box"
            >
              <svg
                class="t-icon t-icon-add"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
          </li>
        </ul>
        <input
          accept=""
          hidden=""
          type="file"
        />
        <transition-stub
          class="t-image-viewer"
        >
          <div
            class="t-overlay"
            style="z-index: 1000; transition-duration: 300ms; display: none;"
          >
            
            
          </div>
        </transition-stub>
      </div>
      <div
        class="upload-title"
        data-v-f557e7b4=""
      >
        多选上传图片
      </div>
      <div
        data-v-f557e7b4=""
      >
        <ul
          class="t-upload__card"
        >
          
          
          <li
            class="t-upload__card-item"
          >
            <div
              class="t-upload__card-container t-upload__card-box"
            >
              <svg
                class="t-icon t-icon-add"
                fill="none"
                height="1em"
                viewBox="0 0 16 16"
                width="1em"
              >
                <path
                  d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
                  fill="currentColor"
                  fill-opacity="0.9"
                />
              </svg>
            </div>
          </li>
        </ul>
        <input
          accept=""
          hidden=""
          multiple=""
          type="file"
        />
        <transition-stub
          class="t-image-viewer"
        >
          <div
            class="t-overlay"
            style="z-index: 1000; transition-duration: 300ms; display: none;"
          >
            
            
          </div>
        </transition-stub>
      </div>
    </div>
    
  </div>
</div>
`;
